--- a/karwebsite/src/components/ContactUsBox.css
+++ b/karwebsite/src/components/ContactUsBox.css
@@ -1,7 +1,7 @@
 /* ContactUsComponent.css */
 .contact-us-container {
   width: 100%;
-  font-family: Arial, sans-serif;
+  font-family: "Built Titling", sans-serif;
   border-radius: 8px;
   overflow: hidden;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -59,14 +59,14 @@
 /* Form styling */
 .form-section {
   width: 100%;
-  background-color: #dc2626;
+  background-color: #DE1E29;
   color: white;
   padding: 20px;
   box-sizing: border-box;
 }
 
 .form-title {
-  font-size: 2.5rem;
+  font-size: 64px;
   font-weight: bold;
   text-align: center;
   margin-top: 0;
@@ -80,7 +80,9 @@
 .form-label {
   display: block;
   font-weight: bold;
-  margin-bottom: 5px;
+  font-size: 32px;
+  color: #ffffff;
+  text-align: left;
 }
 
 .form-input,
@@ -90,6 +92,11 @@
   border: none;
   border-radius: 2px;
   box-sizing: border-box;
+  font-family: Roboto, sans-serif;
+  font-size: 18px;
+  margin-top: 5px;
+  margin-bottom: 15px;
+  resize: none;
 }
 
 .form-textarea {
@@ -106,12 +113,14 @@
   background-color: #6b7280;
   color: white;
   border: none;
-  padding: 10px 40px;
+  padding: 10px 100px;
   border-radius: 20px;
-  font-size: 1rem;
+  font-size: 2rem;
   font-weight: bold;
+  font-family: inherit;
   cursor: pointer;
   transition: background-color 0.3s;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .submit-button:hover {
@@ -153,31 +162,26 @@
 
 /* Appointment section */
 .appointment-section {
-  background-color: #e5e7eb;
-  padding: 15px;
+  background-color: #D9D9D9;
+  color: #000000;
+  padding-top: 15px;
+  padding-bottom: 1px;
+  margin-bottom: 20px;
   text-align: center;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
 }
 
 .appointment-text {
-  font-size: 1.2rem;
-  font-weight: bold;
-  margin-bottom: 15px;
+  font-size: 2rem;
+  margin-bottom: 100px;
+  margin-top: 10px;
 }
 
-.appointment-button {
-  background-color: #dc2626;
-  color: white;
-  border: none;
-  padding: 10px 30px;
-  border-radius: 5px;
-  font-size: 1rem;
-  font-weight: bold;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.appointment-button:hover {
-  background-color: #b91c1c;
+.contact-us-wrapper .schedule-appointment-btn {
+  position: absolute;    /* make sure you set position */
+  bottom: 480px;
+  top: inherit;
 }
 
 /* Responsive layout */
@@ -194,4 +198,11 @@
   .map-section {
     height: auto;
   }
+}
+
+.form-section .form-input {
+  background-color: #fff;
+  border: 0;
+  height: 50px;
+  width: 100%;
 }
