--- a/karwebsite/src/components/BlackBoxHeader.css
+++ b/karwebsite/src/components/BlackBoxHeader.css
@@ -15,9 +15,9 @@
     font-size: 48px;
     border: 3px solid #141414;
     border-radius: 8px;
-    top: 730px;
+    top: 84vh;
     position: absolute;
-    z-index: 1;
+    z-index: 3;
     overflow-y: auto;
     left: 50%;
     transform: translateX(-50%);
