--- a/karwebsite/src/components/Login.css
+++ b/karwebsite/src/components/Login.css
@@ -2,31 +2,20 @@
 html, body {
     height: 100%;
     margin: 0;
-}
-.login-header {
-    width: 100%;
-    background: #DE1E29;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 20px;
-    color: yellow;
-    height: 80px;
-    align-items: center;
-    border-bottom-left-radius: 12px;
-    border-bottom-right-radius: 12px;
-}
 
+}
 .login-main {
     display: flex;
-    height: calc(100vh - 80px);
+    min-height: calc(100vh - 80px);
     padding: 0;
     margin-top: 0;
+    align-items: stretch;
 }
 
 .login-container-wrapper {
     display: flex;
     width: 100%;
-    height: 100%;
+    height: auto;
     padding: 0 20px;
     box-sizing: border-box;
 }
@@ -36,12 +25,14 @@ html, body {
     background: #000000;
     padding: 40px 7%;
     width: 50%;
+    height: auto;
     min-width: 300px;
     text-align: left;
 }
 
 .login-form-container h2 {
     color: white;
+    padding-top: 80px;
     margin-bottom: 10px;
     font-size: 64px;
 }
@@ -126,6 +117,5 @@ html, body {
 
 .login-image-container img {
     width: 100%;
-    height: auto;
     object-fit: cover;
 }
