--- a/karwebsite/src/components/ScheduleAppointmentButton.css
+++ b/karwebsite/src/components/ScheduleAppointmentButton.css
@@ -16,7 +16,7 @@
     border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s;
-    top: 750px;
+    top: 86vh;
     position: absolute;
     box-sizing: border-box;
     overflow-y: auto;
