--- a/karwebsite/src/components/Footer.css
+++ b/karwebsite/src/components/Footer.css
@@ -4,7 +4,11 @@
     color: white;
     border-top: 4px solid #dc2626;
     padding-top: 40px;
-  }
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100vw;
+}
   
   .footer-container {
     max-width: 1200px;
