--- a/karwebsite/src/App.css
+++ b/karwebsite/src/App.css
@@ -1290,10 +1290,23 @@ html, body {
   cursor: pointer;
   font-family: 'Built Titling', serif;
   font-size: 1.3rem;
-  gap: 8px;
+  /*gap: 8px;*/
   align-items: center;
   
   
+}
+.cancel-appt-button {
+  background-color: #DE1E29;
+  color: white;
+  border: none;
+  padding: 8px 16px;
+  cursor: pointer;
+  font-family: 'Built Titling', serif;
+  font-size: 1.3rem;
+  /*gap: 8px;*/
+  align-items: center;
+  border-radius: 4px;
+
 }
 
 .appointment-content {
@@ -1301,6 +1314,7 @@ html, body {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 10px;
+  gap: 8px;
 }
 
 .time-container {
